Projet_GL/src/test/deca/context/valid/unprovided/testObjet/instanceOf.deca
// Description:
//   Définition de classes et utilisation de instanceOf
//
// Resultat:
//    Aucune erreur attendue
//
// Historique:
//    Créé le 24/01/2018

class A{
}

class B extends A{
}
{
	B b = new B();
	if (b instanceof A){
	   println("b est bien une instance de A");
	}
}